--- a/fashino/frontend/src/index.css
+++ b/fashino/frontend/src/index.css
@@ -16,3 +16,25 @@ header a {
   font-weight: bold;
   text-decoration: none;
 }
+
+.products {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.rating span {
+  color: #ffc000;
+}
+
+.product {
+  border: 1px #404040 solid;
+  margin: 1rem;
+}
+.product img {
+  width: 100%;
+  max-width: 400px;
+}
+.product-info {
+  padding: 1rem;
+}
